--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<div class="ui container">
+  <h1 class="ui header">
+    {{title}}
+  </h1>
+  <sm-segment>
+    Hello
+    <sm-input icon="dollar" [control]="user" class="left" placeholder="Enter sum..."></sm-input>
+
+    {{user.value}}
+  </sm-segment>
+</div>
